creusot/tests/should_fail/infinite_size.stderr
error[E0072]: recursive type `Node2` has infinite size
 --> infinite_size.rs:1:1
  |
1 | struct Node2(Tree2);
  | ^^^^^^^^^^^^ ----- recursive without indirection
  | |
  | recursive type has infinite size
  |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `Node2` representable
  |
1 | struct Node2(Box<Tree2>);
  |              ++++     +

error[E0072]: recursive type `Tree2` has infinite size
 --> infinite_size.rs:2:1
  |
2 | struct Tree2(Node2);
  | ^^^^^^^^^^^^ ----- recursive without indirection
  | |
  | recursive type has infinite size
  |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `Tree2` representable
  |
2 | struct Tree2(Box<Node2>);
  |              ++++     +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0072`.
